---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: ??.??.2022
  Features:
    - Space Spidertron now slowly hovers instead of bopping up and down. (Thanks Xorimuth!)
---------------------------------------------------------------------------------------------------
Version: 0.2.5
Date: 19.08.2022
  Changes:
    - AAI Programmable Vehicles: AI versions can no longer dock.
  Bugfixes:
    - Prevent crash when too many dockable spidertrons exist (Thanks viperfan7!)
---------------------------------------------------------------------------------------------------
Version: 0.2.4
Date: 17.08.2022
  Changes:
    - Dock now shows compatible spider vehicles.
  Bugfixes:
    - Now compatible with Combat Robots Overhaul (Thanks FuzzyOne!)
---------------------------------------------------------------------------------------------------
Version: 0.2.3
Date: 31.7.2022
  Changes:
    - Space Spidertrons now support drivers (Thanks Klezmer!).
---------------------------------------------------------------------------------------------------
Version: 0.2.2
Date: 31.7.2022
  Changes:
    - No longer do collision checks when undocking.
  Bugfixes:
    - [SEK2] Space Spidertron now also supports nuclear fuel (Again, thanks runtimethecat!).
---------------------------------------------------------------------------------------------------
Version: 0.2.1
Date: 30.07.2022
  Features:
    - Support Krastorio2 equipment (Thanks runtimethecat!).
  Changes:
    - With Krastorio2 installed Space Spidertron now requries fuel.
  Bugfixes:
    - Fixed possible crash if docked spider's equipment no longer exists when undocking.
---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 29.07.2022
  Features:
    - Add support for Picker Dollies.
    - Added a breathing light to the dock.
    - Added custom mini-map representation.