@@ -3,6 +3,8 @@ Version: 0.3.0
 Date: ??.??.2022
   Features:
     - Space Spidertron now slowly hovers instead of bopping up and down. (Thanks Xorimuth!)
+  Changes:
+    - Prevent Lex's Aircraft from being dockable.
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.5
 Date: 19.08.2022
